--- a/docs/firmware/ep05.md
+++ b/docs/firmware/ep05.md
@@ -4,11 +4,124 @@
 
 * レイヤーは自作キーボードに必須の機能だが実装が難しい
 * まずはレイヤーが変わったときに全てのキーを離す
+* まずはレイヤーキーが押されたらそのレイヤーに移動しレイヤーキーが離されたらデフォルトレイヤー(0)に戻る実装とする
 
 ## 例
+
+```c
+#define LAYER_COUNT 3
+#define TO_LAYER(layer) (0xF0 | layer)
+
+uint8_t current_layer = 0;
+
+uint8_t keymap[LAYER_COUNT][MATRIX_ROWS][MATRIX_COLS] = {
+    {
+        {0x04, 0x05}, {TO_LAYER(1), 0x07}
+    },
+    // この実装では移行後のレイヤーにもデフォルトレイヤーと同じ場所にレイヤーキーを配置しないと戻れなくなる
+    {
+        {0x08, 0x09}, {TO_LAYER(1), 0x0A}
+    }
+};
+
+void register_key(uint8_t keycode) {
+    if( (keycode&0xF0)==0xF0 ) {
+        // layer key
+        current_layer = keycode & 0x0F;
+        memset(press_bitmap, 0, sizeof(press_bitmap));
+        memset(report, 0, sizeof(report));
+        return;
+    }
+    
+    if(keycode>=0xE0 && keycode<=0xE7) {
+        // Modifiers
+        report[0] |= 1<<(keycode-0xE0);
+        return;
+    }
+    
+    // append keycode
+    for(uint8_t i=7; i>2; i--) {
+        if(report[i-1]) {
+            report[i]=report[i-1];
+        }
+    }
+    report[2] = keycode;
+}
+
+void unregister_key(uint8_t keycode) {
+    if( (keycode&0xF0)==0xF0 ) {
+        // layer key
+        current_layer = 0;
+        memset(press_bitmap, 0, sizeof(press_bitmap));
+        memset(report, 0, sizeof(report));
+        return;
+    }
+    
+    if(keycode>=0xE0 && keycode<=0xE7) {
+        // Modifiers
+        report[0] &= ~(1<<(keycode-0xE0));
+        return;
+    }
+
+    // remove keycode
+    uint8_t shift = 0;
+    for(uint8_t i=2; i<8; i++) {
+        if(report[i]==keycode) {
+            shift++;
+        }
+
+        if(shift) {
+            if(i+shift<8) {
+                report[i] = report[i+shift];
+            } else {
+                report[i] = 0;
+            }
+        }
+    }
+}
+
+
+int main(void) {
+    while(true) {
+        bool matrix_updated = false;
+
+        for(uint8_t row=0; row<MATRIX_ROWS; row++) {
+            gpio_set_dir(matrix_row_pins[row], OUTPUT);
+            gpio_put(matrix_row_pins[row], LOW);
+            
+            for(uint8_t col=0; col<MATRIX_COLS; col++) {
+                bool state = gpio_get(matrix_col_pins[col]);
+                if( state ) {
+                    // released
+                    if( press_bitmap[row] & (1<<col) ) {
+                        unregister_key(keymap[current_layer][row][col]);
+                        press_bitmap[row] &= ~(1<<col);
+                        matrix_updated = true;
+                    }
+                } else {
+                    // pressed
+                    if( press_bitmap[row] & (1<<col) ) {
+                        // already pressed
+                    } else {
+                        register_key(keymap[current_layer][row][col]);
+                        press_bitmap[row] |= (1<<col);
+                        matrix_updated = true;
+                    }
+                }
+            }
+            gpio_set_dir(matrix_row_pins[row], INPUT_PULLUP);
+        }
+        if(matrix_updated) {
+            report_hid(report);
+        }
+    }
+}
+```
 
 
 
 ## 余談
 
-キーコンビネーションの際に最初にレイヤーキーを押す必要があり少し不便
+* キーコンビネーションの際に最初にレイヤーキーを押す必要があり少し不便
+* 移行後のレイヤーにも同じ場所にレイヤーキーを置かなくてはならず不便
+
